# sharna

./: .gitignore  CMakeLists.txt  IAL.md  INTERRUPTS.json  NOTE  README  header.h  opcodes.h  registers.h  sharna.h  shmalloc.c  shmalloc.h  vm.c  vm.h
assembler/: ast.c  ast.h  codegen.c  codegen.h  ctx.c  ctx.h  quickparser.c  quickparser.h  shasm.c  shasm.h  strutils.c  strutils.h  tok.c  tok.h
cpu/: cpu.c  cpu.h
inst/: add.c  add.h  call.c  call.h  cmp.c  cmp.h  dec.c  dec.h  inc.c  inc.h  inst.h  interrupt.c  interrupt.h  je.c  je.h  jmp.c  jmp.h  jne.c  jne.h  mov.c  mov.h  pop.c  pop.h  push.c  push.h  ret.c  ret.h  sub.c  sub.h  xor.c  xor.h
lib/std/: input.sp  putchar.sp  puts.sp  strlen.sp  writelen.sp
ram/: ram.c  ram.h
rom/: rom.c  rom.h
tests/: CMakeLists.txt  call.sp  cmp.sp  include.sp  other.sp  print_simple.sp  test.c  test.sp  test1.sp
